editplayerform gap fix

--- a/src/components/editPlayerForm/editPlayerForm.module.css
+++ b/src/components/editPlayerForm/editPlayerForm.module.css
@@ -25,8 +25,8 @@
    flex-direction: column;
    justify-content: center;
    align-items:baseline;
-   gap:3px;
-   margin-bottom: 25px;
+   gap:2.5px;
+   margin-bottom: 35px;
    
 }
 
